# human-in-the-loop-practice-makes-perfect

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: README.md
analysis/lightswitch/: main.py
analysis/practice_makes_perfect/: ees.py  random_skills.py
docs/experiment-logs/: 2026-07-21-ees-reproduction.md  2026-07-21-random-skills-baseline.md  README.md
results/ees-double-observe/ees/0/: log.txt
results/ees-double-observe/ees/2/: stats.json
results/ees-double-observe/ees/3/: stats.json
results/ees-double-observe/ees/5/: stats.json
results/ees-double-observe/ees/7/: stats.json
results/ees-double-observe/ees/8/: stats.json
results/ees/ees/0/: stats.json
results/ees/ees/2/: stats.json
results/ees/ees/3/: stats.json
results/ees/ees/5/: stats.json
results/ees/ees/6/: stats.json
results/ees/ees/8/: stats.json
results/ees/ees/9/: stats.json
scripts/: README.md  run_sweep.py
src/hitl_pmp/: cli.py  method_runner.py  practice_loop.py
src/hitl_pmp/adapters/: README.md
src/hitl_pmp/core/: README.md  __init__.py  environment.py  human_oracle.py  method.py  problem.py  structs.py
src/hitl_pmp/core/environment/: Environment.py  types.py
src/hitl_pmp/core/human_oracle/: human_oracle.py
src/hitl_pmp/core/method/: Method.py  method.py  types.py
src/hitl_pmp/core/metrics/: metrics.py  types.py
src/hitl_pmp/core/problem/: Problem.py  problem.py  types.py
src/hitl_pmp/core/problem/environment/: environment.py  types.py
src/hitl_pmp/core/problem/human/: human.py  types.py
src/hitl_pmp/core/problem/human_oracle/: human_oracle.py
src/hitl_pmp/core/problem/tasks/: tasks.py  types.py
src/hitl_pmp/core/renderer/: renderer.py
src/hitl_pmp/environments/: README.md
src/hitl_pmp/environments/ballring/: README.md  cli.py  environment.py  predicates.py  problem.py  tasks.py
src/hitl_pmp/environments/lightswitch/: action_oracle_policy.py  cli.py  environment.py  metrics.py  oracle_policy.py  predicates.py  problem.py  random_skills_policy.py  renderer.py  skill_oracle_policy.py  skills.py  tasks.py
src/hitl_pmp/human_oracles/: README.md
src/hitl_pmp/humans/: README.md
src/hitl_pmp/methods/: README.md
src/hitl_pmp/methods/oracle/: cli.py  skill_oracle_method.py
src/hitl_pmp/methods/practice_makes_perfect/: cli.py  competence_models.py  ees_method.py  practice_loop.py  random_skills_method.py  wrapped_sampler.py
src/hitl_pmp/planning/: README.md  fast_downward.py  grounding.py  pddl.py
tests/: test_cli.py  test_method_runner.py  test_practice_loop.py  test_smoke.py
tests/core/method/: test_method.py  test_types.py
tests/core/metrics/: test_metrics.py
tests/core/problem/: test_problem.py
tests/core/problem/environment/: test_environment.py  test_types.py
tests/core/problem/human/: test_human.py  test_types.py
tests/core/problem/tasks/: test_tasks.py  test_types.py
tests/core/renderer/: test_renderer.py
tests/environments/ballring/: test_cli.py  test_environment.py  test_predicates.py  test_problem.py  test_tasks.py
tests/environments/lightswitch/: test_action_oracle_policy.py  test_cli.py  test_environment.py  test_integration.py  test_metrics.py  test_oracle_policy.py  test_predicates.py  test_problem.py  test_random_skills_policy.py  test_renderer.py  test_skill_oracle_policy.py  test_skills.py  test_tasks.py
tests/methods/oracle/: test_cli.py  test_skill_oracle_method.py
tests/methods/practice_makes_perfect/: test_cli.py  test_competence_models.py  test_ees_method.py  test_integration.py  test_practice_loop.py  test_random_skills_method.py  test_wrapped_sampler.py
tests/planning/: test_fast_downward.py  test_grounding.py  test_pddl.py
tests/scripts/: test_reproducibility.py  test_run_sweep.py
