[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hitl-pmp"
version = "0.1.0"
description = "Human-in-the-Loop: Practice Makes Perfect"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "gymnasium",
    "matplotlib",
    "imageio[ffmpeg]",
    "imageio-ffmpeg",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "import-linter",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/hitl_pmp"]

[tool.coverage.report]
exclude_lines = [
    # Abstract-method bodies never execute regardless of test quality -- the whole
    # point is that a concrete subclass overrides them instead.
    "raise NotImplementedError",
    # pytest imports modules rather than running them as __main__, so a script's
    # entrypoint guard is never exercised under test regardless of how well its
    # own main()/parse_args() are covered.
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
preview = true

[tool.ruff.lint]
# N999 bans non-lower_case.py module/file names.
select = ["E", "F", "I", "UP", "B", "SIM", "TID", "PLR0917", "N999"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"dataclasses".msg = "Dataclasses are banned in this project — use a pydantic BaseModel instead."
"attr".msg = "Use a pydantic BaseModel instead of attrs in this project."
"attrs".msg = "Use a pydantic BaseModel instead of attrs in this project."
"typing.TYPE_CHECKING".msg = "if TYPE_CHECKING guards are banned — import the target's types.py directly instead of its ABC file, which avoids the cycle without deferring the import."

[tool.ruff.lint.pylint]
# Every parameter (beyond self/cls) must be keyword-only — this makes any
# positional-or-keyword parameter in a function we define a lint error.
max-positional-args = 0

[tool.mypy]
python_version = "3.10"
packages = ["hitl_pmp"]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.importlinter]
root_packages = ["hitl_pmp"]

# Encodes core/README.md's dependency direction as an enforced contract, not just
# prose: core/ is the foundation nothing else may be imported by; practice_loop.py/
# humans/planning/adapters depend only on core and are mutually independent (nothing
# in any of the four currently imports another); method_runner.py sits above those
# (it drives practice_loop.py); environments/ sits above that (environments/<domain>/
# cli.py drives method_runner.py); methods/ sits above environments/ (a Method like
# SkillOracleMethod imports the domain it wraps); and hitl_pmp/cli.py is the true
# top, the only thing allowed to import both environments/ and methods/ directly.
# This is the exact rule a manual review missed once already (SkillOracleMethod
# briefly lived inside environments/lightswitch/ before being moved to
# methods/oracle/) -- see methods/README.md's "oracle/" section.
[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "hitl_pmp.cli",
    "hitl_pmp.methods",
    "hitl_pmp.environments",
    "hitl_pmp.method_runner",
    "hitl_pmp.practice_loop | hitl_pmp.humans | hitl_pmp.planning | hitl_pmp.adapters",
    "hitl_pmp.core",
]
